# finetype

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  TAXONOMY_QUICK_REFERENCE.md  eval_char.py
.github/workflows/: ci.yml  release.yml
backlog/: config.yml
backlog/docs/: doc-001 - Taxonomy-Ambiguity-Resolution-Decisions-char-cnn-v1.md  doc-002 - CharCNN-v1-Inference-Benchmark-Results.md  doc-003 - DuckDB-Extension-Size-Strategy-—-Embed-Model-Weights.md
backlog/milestones/: m-0 - phase-1-taxonomy.md  m-1 - phase-2-data-generation.md  m-2 - phase-3-build-&-train.md  m-3 - phase-4-validation-engine.md  m-4 - phase-5-duckdb-extension.md  m-5 - phase-6-open-source-&-huggingface.md
backlog/tasks/: nnft-001 - Design-YAML-taxonomy-specification-with-transformation-contracts.md  nnft-002 - Implement-synthetic-data-generators-for-all-151-types.md  nnft-003 - Build-CharCNN-training-and-inference-pipeline.md  nnft-004 - Train-and-evaluate-char-cnn-v1-baseline-model.md  nnft-005 - Fix-generator-quality-issues-identified-by-char-cnn-v1-confusion-analysis.md  nnft-006 - Add-phonenumber-crate-for-locale-aware-phone-number-generation.md  nnft-007 - Add-luhn-crate-for-credit-card-and-IMEI-checksum-validation.md  nnft-008 - Resolve-taxonomy-ambiguities-revealed-by-char-cnn-v1-confusion-patterns.md  nnft-009 - Train-char-cnn-v2-with-improved-generators-and-extended-epochs.md  nnft-010 - Benchmark-inference-latency-and-throughput.md  nnft-011 - Design-and-implement-tiered-inference-models.md  nnft-012 - Implement-column-mode-inference-with-distribution-based-disambiguation.md  nnft-013 - Integrate-JSON-Schema-validation-engine.md  nnft-014 - Implement-finetype-validate-CLI-command-with-quality-reports.md  nnft-015 - Set-up-finetype-duckdb-extension-crate-scaffold.md  nnft-016 - Implement-DuckDB-finetype-and-finetype_profile-scalar-functions.md  nnft-017 - Implement-DuckDB-finetype_cast-and-finetype_unpack-functions.md  nnft-018 - Generate-training-data-with-full-domain.category.type.locale-labels.md  nnft-019 - Publish-FineType-as-open-source-on-GitHub.md  nnft-020 - Upload-model-and-dataset-to-HuggingFace.md  nnft-021 - Submit-DuckDB-extension-to-community-extensions.md  nnft-022 - Set-up-GitHub-Actions-CI-CD-pipeline.md  nnft-023 - Create-Homebrew-formula-for-finetype-cli.md  nnft-024 - Research-DuckDB-extension-size-strategy-for-embedded-model-weights.md  nnft-025 - Evaluate-model-against-GitTables-real-world-dataset.md  nnft-026 - Add-year-disambiguation-rule-to-column-mode-inference.md  nnft-027 - Add-finetype-profile-CLI-command-for-CSV-column-profiling.md  nnft-028 - Add-column-mode-GitTables-evaluation-to-CLI.md  nnft-029 - Fix-postal-code-rule-false-positive-on-year-columns.md  nnft-030 - Update-README-and-DEVELOPMENT.md-to-reflect-current-state.md  nnft-031 - Fix-accuracy-number-add-models-default-symlink-update-CHANGELOG.md  nnft-032 - Relax-year-detection-4-digit-check-and-widen-generator-range.md  nnft-033 - Add-post-processing-rules-to-resolve-format-checkable-model-confusions.md  nnft-034 - Add-post-processing-rules-for-hash-token_hex-and-emoji-gender_symbol-confusions.md  nnft-035 - Add-post-processing-rules-for-ISSN-postal_code-and-longitude-latitude-confusions.md  nnft-036 - Add-email-rescue-post-processing-rule-for-misclassified-emails.md  nnft-037 - Evaluate-model-against-GitTables-1M-full-dataset.md  nnft-038 - Add-ISBN-ISSN-DOI-format-detection-to-taxonomy.md  nnft-039 - Improve-year-training-data-to-reduce-decimal_number-misclassification.md  nnft-040 - Establish-GitTables-1M-stratified-sample-as-standard-evaluation-benchmark.md  (+20 more)
crates/finetype-cli/: Cargo.toml  build.rs
crates/finetype-cli/src/: main.rs
crates/finetype-core/: Cargo.toml
crates/finetype-core/src/: checker.rs  generator.rs  lib.rs  locale_data.rs  taxonomy.rs  tokenizer.rs  validator.rs
crates/finetype-duckdb/: Cargo.toml  build.rs
crates/finetype-duckdb/src/: lib.rs  normalize.rs  type_mapping.rs  unpack.rs
crates/finetype-model/: Cargo.toml
crates/finetype-model/src/: char_cnn.rs  char_training.rs  column.rs  inference.rs  lib.rs  model.rs  tiered.rs  tiered_training.rs  training.rs
eval/gittables/: .gitignore  REPORT.md  dbpedia_gt.csv  dbpedia_labels.csv  dbpedia_targets.csv  eval.sql  eval_1m.sql  extract_metadata_1m.py  investigate_tech.sql  prepare_1m_values.py  schema_gt.csv  schema_labels.csv  schema_targets.csv
labels/: definitions.yaml  definitions_datetime.yaml  definitions_geography.yaml  definitions_identity.yaml  definitions_representation.yaml  definitions_technology.yaml  definitions_v2_container.yaml  definitions_v2_datetime.yaml  definitions_v2_geography.yaml  definitions_v2_representation.yaml
models/: .gitkeep  default
models/char-cnn-v1/: eval_results.json
models/char-cnn-v2/: eval_results.json
models/char-cnn-v4/: eval_results.json
models/tiered/: eval_results.json  tier_graph.json
scripts/: fix_taxonomy.py  merge_taxonomy.py
tests/: smoke.sh
