[workspace]
resolver = "2"
members = [
    "crates/finetype-core",
    "crates/finetype-model",
    "crates/finetype-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/noon-org/finetype"
authors = ["Hugh Cameron"]
description = "Semantic type classification for text data"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# ML / Candle
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = { version = "0.21", default-features = false, features = ["onig", "http"] }

# Data generation
fakeit = "1.3"
fake = { version = "3", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
md-5 = "0.10"
glob = "0.3"
regex = "1.10"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async
tokio = { version = "1.0", features = ["full"] }

# Utilities
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
finetype-core = { path = "crates/finetype-core" }
finetype-model = { path = "crates/finetype-model" }

[profile.release]
lto = true
codegen-units = 1
