[package]
name = "finetype-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for FineType semantic type classification"

[[bin]]
name = "finetype"
path = "src/main.rs"

[features]
default = ["cpu"]
cpu = ["finetype-model/cpu"]
cuda = ["finetype-model/cuda"]
metal = ["finetype-model/metal"]

[dependencies]
finetype-core = { workspace = true }
finetype-model = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
